# R1_Ethercat-4c

./: CMakeLists.txt
inc/1_Middleware/linkx/: linkx.h
inc/1_Middleware/math/: math.h
inc/2_Device/Motor/: dvc_encoder.h  dvc_motor_dm.h  dvc_odrive.h
inc/3_Chariot/chassis/: crt_chassis.h
inc/4_Interaction/robot/: robot.h
install/: local_setup.sh  setup.sh
lib/soem/: soem.lib
log/: latest_build
src/: main.cpp
src/1_Middleware/linkx/: linkx.c
src/2_Device/Motor/: dvc_encoder.cpp  dvc_motor_dm.cpp  dvc_odrive.cpp
src/2_Device/ecat_manager/: ecat_manager.c
src/2_Device/linkx4c_handler/: linkx4c_handler.c
src/3_Chariot/chassis/: crt_chassis.cpp
src/4_Interaction/robot/: robot.cpp
src/5_Task/task/: task.cpp
